# abyss-substrate

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/pallet-portalverse-nexus/: Cargo.toml
pallets/pallet-portalverse-nexus/src/: challenge.rs  lib.rs  mock.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs
primitives/src/: currency.rs  unchecked_extrinsic.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
