[package]
name = "pallet-portalverse-nexus"
version = "4.0.1-dev"
authors = ["Portalverse Team"]
edition = "2021"
license = "MIT"
homepage = "https://www.portalverse.net"
description = "Pallet for renderer registry and challenge."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0' }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
ascii = { default-features = false, version = "1.0" }
serde = { default-features = false, version = "1.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
# pallet-assets = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
ethereum-types = { version = "0.13", default-features = false }
hex-literal = "0.3"

orml-traits = {  git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false , branch = "polkadot-v0.9.37"  }
orml-tokens = {  git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false , branch = "polkadot-v0.9.37"  }
orml-currencies = {  git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false , branch = "polkadot-v0.9.37"  }

pallet-dex = { version = "2.14.0", default-features = false, path = "../dex"}
primitives = { package = "acala-primitives", path = "../../primitives", default-features = false }


[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
orml-traits = {  git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false , branch = "polkadot-v0.9.37"  }
orml-tokens = {  git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false , branch = "polkadot-v0.9.37"  }
orml-currencies = {  git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false , branch = "polkadot-v0.9.37"  }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-traits/std', 
    "pallet-dex/std",
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
]
